# chttp2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: README.md  throughput.cpp
cmake/: CompilerWarnings.cmake  chttp2Config.cmake.in
examples/: README.md  async_requests.cpp  client_config.cpp  post_json.cpp  simple_get.cpp  timeout_cancel.cpp  unix_socket.cpp
include/chttp2/: byte_buffer.hpp  byte_span.hpp  callback_dispatcher.hpp  client.hpp  client_config.hpp  connection.hpp  connection_manager.hpp  connector.hpp  endpoint.hpp  flow.hpp  frame.hpp  frame_codec.hpp  header_field.hpp  http2_constants.hpp  http2_protocol.hpp  http2_session.hpp  ihttp_session.hpp  log.hpp  platform.hpp  protocol_event.hpp  reactor.hpp  request.hpp  request_context.hpp  response.hpp  socket_fd.hpp  stream.hpp  stream_transport.hpp
include/chttp2/hpack/: hpack.hpp  huffman.hpp  table.hpp
scripts/: amalgamate.py  lint.py
src/: byte_buffer.cpp  callback_dispatcher.cpp  client.cpp  connection.cpp  connection_manager.cpp  connector.cpp  flow.cpp  frame.cpp  frame_codec.cpp  http2_protocol.cpp  http2_session.cpp  platform.cpp  reactor.cpp  request_context.cpp  socket_fd.cpp  stream.cpp  stream_transport.cpp
src/hpack/: hpack.cpp  huffman.cpp  table.cpp
test/: CMakeLists.txt  amalgamate_impl.cpp
test/e2e/: bench.cpp  chaos_test.cpp  e2e_fixture.hpp  e2e_test.cpp
test/e2e/testserver/: go.mod  main.go
test/src/: byte_buffer_test.cpp  flow_test.cpp  http2_protocol_test.cpp
test/src/frame/: frame_test.cpp
test/src/hpack/: hpack_test.cpp  huffman_test.cpp  utils.hpp
tools/: chttp2_get.cpp
